Removed canonicalize and delegating normalization to Serde with adequate config